fix the top space issue on small device

--- a/app/login/login.component.css
+++ b/app/login/login.component.css
@@ -5,7 +5,7 @@
 }
 
 .login-form {
-  margin-top: 60px;
+  padding-top: 40px;
   margin-left:auto;
   margin-right:auto;
   width:270px;
